# hyper-rdma

./: .gitignore  CMakeLists.txt  DataStruct.cpp  DataStruct.h  common.c  get_ibinfo.cpp  main_client.cpp  main_server.cpp  rdma-utils.cpp  rdma-utils.h  simplest_client.cpp  simplest_server.cpp
include/: rdma-utils.h  rdma_cma.h
